# CPP-BattleSnake

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt
.github/workflows/: ubuntu.yml
app/: CMakeLists.txt  Main.cc  main.cc
cmake/: ConfigSafeGuards.cmake  LTO.cmake
include/: Direction.h  Position.h
include/agents/: AbstractAgent.h  Agents.h  HungryAgent.h
include/environment/: BoardState.h  Direction.h  DirectionUtil.h  GameInfo.h  Position.h  Snake.h
include/logic/: AStar.h  AlphaStar.h  Util.h
src/: CMakeLists.txt  Server.cc  server.cc
src/agents/: Agents.cc  CMakeLists.txt  HungryAgent.cc
src/environment/: BoardState.cc  CMakeLists.txt  DirectionUtil.cc  Position.cc  Snake.cc
src/logic/: AStar.cc  AlphaStar.cc  CMakeLists.txt  Util.cc
src/server/: CMakeLists.txt  Server.cc
tests/: CMakeLists.txt  TestAStar.cc  TestBoardState.cc  TestPosition.cc  TestSnake.cc  main.cc
